+superuser menu admin, home templeate

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-toolbar (toggleSideNav)="toggle( sidenav )" [unreadMessages]="unreadMessages" (toggleChat)="toggle( chat )">
 </app-toolbar>
 
-<mat-drawer-container class="h-100" style="background-color: unset;">
+<mat-drawer-container>
 
     <!-- sidenav -->
     <mat-drawer #sidenav id="sidenav" mode="over">
@@ -14,9 +14,11 @@
         </app-chat>
     </mat-drawer>
 
-    <div class="mt-1" style="text-align: -webkit-center;">
+    <!-- container -->
+    <div style="text-align: -webkit-center;">
         <router-outlet></router-outlet>
     </div>
+    
     <div class="saturno-base"></div>
 
 </mat-drawer-container>
