--- a/src/app/modules/admin/companies/companies.component.html
+++ b/src/app/modules/admin/companies/companies.component.html
@@ -1,4 +1,4 @@
-<div class="saturno-container animated fadeIn"  [ngClass]="{nomargin:nomargin, nopadding:nopadding}">
+<div class="saturno-card animated fadeIn"  [ngClass]="{nomargin:nomargin, nopadding:nopadding}">
 
     <div class="card bg-success text-white">
         <div class="card-header">
