--- a/src/app/modules/admin/home/home.component.html
+++ b/src/app/modules/admin/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="saturno-container shadow-box animated fadeIn">
+<div class="saturno-card shadow-box animated fadeIn">
 
   <!-- STEPPER OFF -->
   <div *ngIf="!showIntro">
