--- a/src/app/modules/public/myticket/myticket.component.html
+++ b/src/app/modules/public/myticket/myticket.component.html
@@ -2,7 +2,7 @@
 <!-- TICKETS SCREEN -->
 <!-- ======================================================== -->
 <div class="saturno-myticket-background">
-    <div class="saturno-container m-0">
+    <div class="saturno-card m-0">
 
         <!------------------------------>
         <!-- SU TURNO REDONDO -->
