--- a/src/app/pages/how-works/how-works.component.html
+++ b/src/app/pages/how-works/how-works.component.html
@@ -1,4 +1,4 @@
-<div class="saturno-container p-0 shadow-box animated fadeIn">
+<div class="saturno-card p-0 shadow-box animated fadeIn">
 
 
     <!-- STEPPER ON -->
@@ -12,7 +12,7 @@
                     <p>
                         Saturno <b>no es un sistema de agenda de reseva de turnos programados.</b> Es un sistema de administración de turnos 
                         con <b>demanda espontánea</b> cuyos turnos pueden ser obtenidos en forma online. Puede usarse en todo comercio o 
-                        empresa cuyos clientes requieren recepcionar a sus clientes de manera <b>espontánea</b>, por ejemplo una guardia en un
+                        empresa que requiera recepcionar a sus clientes de manera <b>espontánea</b>, por ejemplo una guardia en un
                         hospital, una clínica o un comercio de venta al público.
                     </p>
                     <p>
