--- a/src/app/modules/metrics/dashboard/dashboard.component.html
+++ b/src/app/modules/metrics/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="saturno-container shadow-box">
+<div class="saturno-card shadow-box">
     <div class="card bg-secondary text-white">
         <div class="card-header">Dashboard de Métricas</div>
         <div class="card-body">
