--- a/src/app/modules/metrics/ocio/ocio.component.html
+++ b/src/app/modules/metrics/ocio/ocio.component.html
@@ -1,4 +1,4 @@
-<div class="saturno-container shadow-box">
+<div class="saturno-card shadow-box">
     <div class="card bg-secondary text-white">
         <div class="card-header">Indicadores de Tiempos de Ocio</div>
         <div class="card-body">
