--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,53 +1,62 @@
-<div class="saturno-container shadow-box animated fadeIn">
+<div class="saturno-container saturno-bg-register container-fluid">
 
-    <form ngNativeValidate #f="ngForm">
-        <div class="jumbotron py-5 text-dark">
+    <div class="row">
+        <div class="col-md">
+            <div class="saturno-card shadow-box animated fadeIn">
 
-            <h2>Bienvenido</h2>
-            <p class="lead" style="font-size: medium;">Desde aquí puede registrar su cuenta. </p>
-            <hr class="saturno-hr my-4">
-            <p class="lead" style="font-size: medium;">Usted puede crear su cuenta utilizando su cuenta de Google.</p>
-           
-            <button class="btn btn-danger btn-block" type="button" id="btnGoogle"
-            data-toggle="tooltip">
-            <span class="mdi mdi-google"></span> Google
-        </button>
+                <form ngNativeValidate #f="ngForm">
+                    <div class="saturno-card m-0 py-5 text-dark">
+
+                        <h2>Bienvenido</h2>
+                        <p class="lead" style="font-size: medium;">Desde aquí puede registrar su cuenta. </p>
+                        <hr class="saturno-hr my-4">
+                        <p class="lead" style="font-size: medium;">Registrese con su cuenta de Google.</p>
+
+                        <button class="btn btn-danger btn-block" type="button" id="btnGoogle" data-toggle="tooltip">
+                            <span class="mdi mdi-google"></span> Google
+                        </button>
+
+                    </div>
+                </form>
+            </div>
 
         </div>
-    </form>
+        <div class="col-md">
+
+            <div class="saturno-card shadow-box animated fadeIn">
+
+               <form ngNativeValidate [formGroup]="forma" (ngSubmit)="registrarUsuario()" id="loginform">
 
 
+                    <!-- User -->
 
+                    <mat-form-field color="warn" logincss class="w-100">
+                        <mat-label>Tu Nombre</mat-label>
 
-    <form ngNativeValidate [formGroup]="forma" (ngSubmit)="registrarUsuario()" id="loginform">
+                        <input matInput placeholder="Diego Perez" formControlName="name" name="name" type="text"
+                            required>
+                    </mat-form-field>
 
+                    <mat-form-field color="warn" logincss class="w-100">
+                        <mat-label>Email</mat-label>
+                        <mat-error *ngIf="forma.errors?.emailExists">Este Email ya se encuentra registrado!</mat-error>
+                        <input matInput placeholder="diego@perez.com" formControlName="email" name="email" type="email"
+                            (keyup)="checkEmailExists()" required>
+                    </mat-form-field>
 
-        <!-- User -->
+                    <mat-form-field color="warn" logincss class="w-100">
+                        <mat-label>Clave</mat-label>
+                        <input matInput placeholder="Clave" formControlName="password1" name="password1" type="password"
+                            required>
+                    </mat-form-field>
 
-        <mat-form-field color="warn" logincss class="w-100">
-            <mat-label>Tu Nombre</mat-label>
+                    <mat-form-field color="warn" logincss class="w-100">
+                        <mat-label>Ingresa la clave nuevamente</mat-label>
+                        <input matInput placeholder="Clave" formControlName="password2" name="password2" type="password"
+                            required>
+                    </mat-form-field>
 
-            <input matInput placeholder="Diego Perez" formControlName="name" name="name" type="text" required>
-        </mat-form-field>
-
-        <mat-form-field color="warn" logincss class="w-100">
-            <mat-label>Email</mat-label>
-            <mat-error *ngIf="forma.errors?.emailExists">Este Email ya se encuentra registrado!</mat-error>
-            <input matInput placeholder="diego@perez.com" formControlName="email" name="email" type="email"
-                (keyup)="checkEmailExists()" required>
-        </mat-form-field>
-
-        <mat-form-field color="warn" logincss class="w-100">
-            <mat-label>Clave</mat-label>
-            <input matInput placeholder="Clave" formControlName="password1" name="password1" type="password" required>
-        </mat-form-field>
-
-        <mat-form-field color="warn" logincss class="w-100">
-            <mat-label>Ingresa la clave nuevamente</mat-label>
-            <input matInput placeholder="Clave" formControlName="password2" name="password2" type="password" required>
-        </mat-form-field>
-
-        <!-- <div class="form-group row">
+                    <!-- <div class="form-group row">
             <div class="col-md-12">
                 <div class="p-2 rounded">
 
@@ -60,32 +69,23 @@
             </div>
         </div> -->
 
-        <!-- [disabled]="!forma.valid" -->
-        <div class="form-group text-center px-4 py-2">
-            <button [disabled]="!forma.valid" class="btn btn-dark btn-block" type="submit">
-                <span class="mdi mdi-account-plus"></span> Registrarme
-            </button>
-        </div>
+                    <!-- [disabled]="!forma.valid" -->
+                    <div class="form-group text-center px-4 py-2">
+                        <button [disabled]="!forma.valid" class="btn btn-dark btn-block" type="submit">
+                            <span class="mdi mdi-account-plus"></span> Registrarme
+                        </button>
+                    </div>
 
-        <div class="form-group m-b-0">
-            <div class="col-sm-12 text-center">
-                <p>Ya tenes una cuenta? | <a routerLink="/login" class="text-dark"><b>Ingresa
-                            aquí</b></a>
-                </p>
+                    <div class="form-group m-b-0">
+                        <div class="col-sm-12 text-center">
+                            <p>Ya tenes una cuenta? | <a routerLink="/login" class="text-dark"><b>Login</b></a>
+                            </p>
+                        </div>
+                    </div>
+
+                </form>
             </div>
-        </div>
 
-    </form>
-</div>
-
-
-<div class="saturno-footer">
-    <div class="row">
-        <div class="col">
-            <span class="footer-icon-menu" routerLink="/home">
-                <span class="mdi mdi-home xl"></span>
-                <div>Inicio</div>
-            </span>
         </div>
     </div>
 </div>
